add git ignore and fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-./Entity.cpp
-./Entity.h
-./GeometryOperations.cpp
-./GeometryOperations.h
-./LayerOperations.cpp
-./LayerOperations.h
-./Oshmetkov.cpp
-./Oshmetkov.h
-./test_processor.cpp
-./umformer.cpp
-./umformer.h
-./test
-./processor
-./target.json
-./test.json
-./include
-./.vscode
-./.DS_Store
+/Entity.cpp
+/Entity.h
+/GeometryOperations.cpp
+/GeometryOperations.h
+/LayerOperations.cpp
+/LayerOperations.h
+/Oshmetkov.cpp
+/Oshmetkov.h
+/test_processor.cpp
+/umformer.cpp
+/umformer.h
+/test
+/processor
+/target.json
+/test.json
+/include
+/.vscode
+/.DS_Store
